css/style.css
/* GENERAL */

#main-footer {
    max-height: calc(100vh - 72px);
    overflow-y: auto;
}

a {
    text-decoration: none;
    color: white;
}

.line {
    height: 4px;
    width: 130px;
    border-radius: 16px;
}

textarea {
    min-height: 200px;
}

input[type="text"], 
input[type="email"],
input[type="number"],
textarea {
    border: 0;
    border-bottom: 2px solid #d3d2d3;
    width: 100%;
    color: #304050;
    padding: 16px 0;
}

input[type="text"]::placeholder, 
input[type="email"]::placeholder,
input[type="number"]::placeholder,
textarea::placeholder {
    color: #304050;
    font-size: 20px;
    font-weight: 600;
}


/* hide arrows for Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* hide arrows for Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.colorTeal {
    color: #29ba9c;
}

.bgTeal { 
    background-color: #29ba9c; 
    color: white;
}

.bgWhite {
    background-color: white;
    color: #304050;
}

.bgDarkBlue {
    background-color: #304050;
}

.bgLightBlue {
    background-color: #3d556b;
}

/* HEADER */

header {
    color: white;
    background-color: #304050;
    height: 72px;
}

header nav > div:hover {
    background-color: #222e3a;
    cursor: pointer;
}

header nav > div > a {
    font-size: 0.8rem;
    font-weight: 600;
}

/* MAIN */

section {
    padding: 48px 0;
}

section h1 {
    font-size: 48px;
    font-weight: 600;
}

/* jumbo section */

section#jumbo img {
    width: 200px;
}

/* FOOTER */

footer .icon {
    width: 10px;
    height: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    padding: 32px;
}

